# leptos-state

./: .clippy.toml  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_OVERVIEW.md  LEPTOS_0_8_MIGRATION_ROADMAP.md  MIGRATION_QUICK_START.md  Makefile  PROMOTION_CHECKLIST.md  README.md  RELEASE_NOTES_v0.1.0.md  SOCIAL_ANNOUNCEMENT.md  TESTING.md  competitive-analysis.toml  crates.js  demo-summary.html  error_categories.txt  flake.nix  help.html  package-lock.json  package.json  playwright.config.ts  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  src-files.js  stakeholder_verification.md  tarpaulin.toml  test-built-examples.js  test_history.rs  verify.sh  verify_functionality.sh
examples/analytics-dashboard/: Cargo.toml  Trunk.toml  index.html
examples/analytics-dashboard/src/: dashboard.rs  lib.rs
examples/codegen/: Cargo.toml  Trunk.toml  index.html
examples/codegen/multi_lang/: state_machine.py
examples/codegen/multi_lang/docs/: state_machine.md
examples/codegen/multi_lang/src/: StateMachine.ts
examples/codegen/src/: main.rs
examples/codegen/test_generated/src/: state_machine.rs
examples/compatibility-example/: Cargo.toml  Trunk.toml  index.html
examples/compatibility-example/src/: main.rs
examples/competitive-dashboard/: Cargo.toml
examples/competitive-dashboard/src/: main.rs
examples/counter/: Cargo.toml  Trunk.toml  index.html  styles.css
examples/counter/src/: main.rs
examples/history/: Cargo.toml  Trunk.toml  index.html
examples/history/src/: main.rs
examples/notification-center/: Cargo.toml  Trunk.toml  index.html
examples/notification-center/src/: components.rs  lib.rs  main.rs  notification_machine.rs  styles.css
examples/todo-app/: Cargo.toml  README.md  Trunk.toml  debug_input.html  debug_test.html  index.html
examples/todo-app/src/: app.rs  components.rs  lib.rs  main.rs  models.rs  simple_todo.rs  state_machines.rs  stores.rs  styles.css
examples/video-player/: Cargo.toml  Trunk.toml  index.html  styles.css  video_player.js
examples/video-player/src/: components.rs  lib.rs  state_machine.rs  video_player.rs
leptos-state/: Cargo.toml  audit_trait_bounds.sh
leptos-state-minimal/: Cargo.toml  README.md
leptos-state-minimal/examples/counter/: Cargo.toml  counter.d.ts  counter.js  counter_bg.wasm.d.ts  counter_example.d.ts  counter_example.js  counter_example_bg.wasm.d.ts  demo.html  index.html
leptos-state-minimal/examples/counter/src/: lib.rs  main.rs
leptos-state-minimal/examples/todo-app/: Cargo.toml  index.html  todo_app_example.d.ts  todo_app_example.js  todo_app_example_bg.wasm.d.ts
leptos-state-minimal/examples/todo-app/src/: lib.rs  main.rs
leptos-state-minimal/examples/traffic-light/: Cargo.toml  demo.html  index.html  traffic_light_example.d.ts  traffic_light_example.js  traffic_light_example_bg.wasm.d.ts
leptos-state-minimal/examples/traffic-light/src/: lib.rs  main.rs
leptos-state-minimal/src/: devtools.rs  error.rs  hooks.rs  lib.rs  machine.rs  middleware.rs  performance.rs  persistence.rs  store.rs  testing.rs  visualization.rs
leptos-state/benches/: performance_benchmarks.rs  simple_benchmarks.rs  state_machine_performance.rs
leptos-state/examples/counter/: Cargo.toml
leptos-state/examples/counter/src/: main.rs  styles.css
leptos-state/src/: api_spec.rs  lib.rs  schema.rs  version.rs
leptos-state/src/compat/: callbacks.rs  context.rs  effects.rs  mod.rs  resources.rs  signals.rs  simple.rs  view.rs
leptos-state/src/hooks/: mod.rs  use_machine.rs  use_store.rs
leptos-state/src/machine/: action_builder.rs  action_composite.rs  action_control.rs  action_core.rs  action_executor.rs  actions.rs  advanced_testing_minimal.rs  bundle_optimization.rs  cache_system.rs  child_state_builder.rs  child_transition_builder.rs  codegen.rs  codegen_builder.rs  codegen_config.rs  codegen_core.rs  codegen_ext.rs  codegen_types.rs  core.rs  core_actions.rs  core_errors.rs  core_guards.rs  core_machine.rs  core_macros.rs  core_state.rs  core_traits.rs  core_types.rs  coverage_tracking.rs  doc_builder.rs  doc_config.rs  doc_data.rs  doc_generator.rs  doc_styling.rs  documentation.rs  events.rs  guard_builder.rs  guard_composite.rs  guard_context.rs  guard_core.rs  guard_logical.rs  guard_state.rs  (+63 more)
leptos-state/src/machine/builder/: mod.rs
leptos-state/src/machine/codegen/: mod.rs
leptos-state/src/machine/core/: core.rs  mod.rs  transitions.rs
leptos-state/src/machine/integration/: mod.rs
leptos-state/src/machine/persistence/: mod.rs
leptos-state/src/machine/visualization/: mod.rs
leptos-state/src/store/: async_store.rs  async_store_cached.rs  async_store_core.rs  async_store_hooks.rs  async_store_infinite.rs  core.rs  devtools.rs  devtools_connectors.rs  devtools_core.rs  devtools_timeline.rs  middleware.rs  mod.rs  store.rs  store_core.rs  store_memoized.rs  store_persistence.rs  store_selectors.rs  store_simple.rs
leptos-state/src/store/memoized/: basic.rs  combined.rs  dependency.rs  factory.rs  lazy.rs  mod.rs  performance.rs
leptos-state/src/utils/: mod.rs  types.rs  utils_collections.rs  utils_config.rs  utils_error.rs  utils_time.rs  utils_traits.rs
leptos-state/src/utils/collections/: cache.rs  core.rs  mod.rs  (+1 more)
leptos-state/src/v1/: builder.rs  context.rs  devtools.rs  error.rs  event.rs  machine.rs  migration.rs  mod.rs  performance.rs  persistence.rs  persistence_impl.rs  state.rs  store.rs  testing.rs  traits.rs
leptos-state/test_docs/: documentation.html  documentation.json  documentation.md  documentation_custom.txt
leptos-state/test_generated/docs/: state_machine.md
leptos-state/test_generated/src/: StateMachine.ts  state_machine.rs
leptos-state/tests/: test_bundle_optimization.rs
tests/rust/integration/: Cargo.toml  feature_combinations.rs  fixtures.rs  lib.rs  machine_tests.rs  mod.rs  store_tests.rs  test_competitive_analysis.rs  test_coverage_enforcement.rs  test_leptos_version_support.rs  test_playwright_enhancements.rs  test_pnpm_workspace.rs  test_rust_standards.rs
(+691 files in other folders)
