[package]
name = "leptos-state"
version = "1.0.1"
edition = "2024"
authors = ["Cloud Shuttle <team@cloud-shuttle.com>"]
description = "A powerful state management library for Leptos applications with state machines, persistence, and DevTools"
repository = "https://github.com/cloud-shuttle/leptos-state"
license = "MIT OR Apache-2.0"
keywords = ["leptos", "state-management", "reactive", "wasm"]
categories = ["wasm", "web-programming"]

[dependencies]
leptos = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
web-sys = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
futures = "0.3"
proptest = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
pretty_assertions = { workspace = true }
quickcheck = { workspace = true }
tokio-test = { workspace = true }
async-std = { workspace = true }
criterion = { workspace = true }
divan = { workspace = true }
mockall = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
test-case = { workspace = true }
insta = { workspace = true }
console_error_panic_hook = { workspace = true }

[features]
default = []
wasm = ["web-sys", "wasm-bindgen", "js-sys"]
persist = ["serde", "serde_json", "serde_yaml", "uuid"]
visualization = ["serde", "serde_json"]
codegen = ["serde", "serde_json"]
testing = ["proptest"]
devtools = ["serde", "serde_json", "web-sys", "wasm-bindgen", "uuid"]
migration = ["serde", "serde_json"]
ssr = ["leptos/ssr"]
serialization = ["serde", "serde_json", "serde_yaml"]
documentation = []
integration = []
performance = []

# Leptos version compatibility features
leptos-0-8 = []
leptos-0-9 = []