[package]
name = "leptos-state"
version = "0.3.0"
edition = "2021"
authors = ["Cloud Shuttle <team@cloud-shuttle.com>"]
description = "A powerful state management library for Leptos applications with state machines, persistence, and DevTools"
repository = "https://github.com/cloud-shuttle/leptos-state"
license = "MIT OR Apache-2.0"
keywords = ["leptos", "state-management", "reactive", "wasm"]
categories = ["wasm", "web-programming"]

[dependencies]
leptos = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
js-sys = { workspace = true }
futures = "0.3"
async-trait = "0.1"
base64 = "0.21"
flate2 = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
quickcheck = { workspace = true }
tokio-test = { workspace = true }
async-std = { workspace = true }
criterion = { workspace = true }
divan = { workspace = true }
mockall = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }
test-case = { workspace = true }
insta = { workspace = true }
console_error_panic_hook = { workspace = true }

[features]
default = ["serde", "serde_json", "serialization"]
persist = ["serde", "serde_json", "serialization"]
visualization = ["serde", "serde_json", "serialization"]
testing = []
performance = []
integration = []
documentation = []
serialization = ["serde", "serde_json", "serde_yaml"]
codegen = []
devtools = []
ssr = ["leptos/ssr"]

# Leptos version compatibility features
leptos-0-6 = []
leptos-0-7 = []
leptos-0-8 = []