[package]
name = "analytics-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
