[package]
name = "compatibility-example"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos-state = { path = "../../leptos-state" }
console_error_panic_hook = { workspace = true }
console_log = "1.0"
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
