[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = "1.0"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Removed binary target - using library only
