[package]
name = "counter-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-state-minimal = { path = "../../" }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
wasm-bindgen = "0.2"

[[bin]]
name = "counter"
path = "src/main.rs"

[package.metadata.leptos]
output-name = "counter"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style.css"
