[package]
name = "traffic-light-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-state-minimal = { path = "../../", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
log = "0.4"
